--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["Terry <78312274+TerryEmeigh@users.noreply.github.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
 selenium = "^4.35.0"
 dotenv = "^0.9.9"
+pandas = "^2.3.2"
 
 
 [build-system]
